--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,23 +3,44 @@ html, body {
 }
 
 .top-navbar {
-  position: relative;
-  height: 44px;
   background: #4679bd;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: absolute;
+  height: 44px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
 }
 
 .sidebar {
-  float: left;
+  position: absolute;
+  margin-top: 44px;
   width: 217px;
-  height: 100%;
+  top: 0px;
+  bottom: 0px;
 }
 
 .main {
+  position: absolute;
   margin-left: 217px;
-  background: #DDD;
+  margin-top: 44px;
+  padding: 8px;
+  background: #f5f5f5;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+
+.content-box {
+  background: white;
+  float: left;
+  border: thin solid #666;
   height: 100%;
-  width: 100%;
+  width: 49%;
+}
+
+.middle {
+  float: left;
+  height: 100%;
+  width: 8px;
 }
