--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,6 @@ block content
   div(class='top-navbar')
   div(class='sidebar')
   div(class='main')
-    //-div(class='content-box')
-    //-div(class='middle')
-    //-div(class='content-box')
+    div(class='left-box')
+    div(class='middle')
+    div(class='right-box')
