Setup express route to serve partials written in jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,6 @@
 extends layout
 
 block content
-  div(class='top-navbar')
-  div(class='sidebar')
-  div(class='main')
-    div(class='left-box')
-    div(class='middle')
-    div(class='right-box')
+  .top-navbar
+  .sidebar
+  .main(resizable-boxes)
