--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,11 @@
 doctype html
-html
+html(ng-app='Readyou')
   head
     title= title
     link(rel='stylesheet', href='/bower_components/normalize.css/normalize.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript', src='/bower_components/angular/angular.js')
+    script(type='text/javascript', src='/javascripts/app.js')
+    script(type='text/javascript', src='/javascripts/directives.js')
   body
     block content
