--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,6 +37,9 @@ html, body {
   background: white;
   border: thin solid #aaa;
   width: 48%;
+  -webkit-box-shadow: inset 0px 1px 3px 0px rgba(102,102,102,1);
+  -moz-box-shadow: inset 0px 1px 3px 0px rgba(102,102,102,1);
+  box-shadow: inset 0px 1px 3px 0px rgba(102,102,102,1);
 }
 
 .left-box {
