--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,4 +54,17 @@ html, body {
   position: absolute;
   height: 100%;
   width: 10px;
+  cursor: col-resize;
+}
+
+.middle::after {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 48%;
+  left: 3px;
+  height: 15px;
+  width: 2px;
+  border-right: thin solid #aaa;
+  border-left: thin solid #aaa;
 }
