Recalculate box width on window resize

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,6 @@ html(ng-app='Readyou')
     script(type='text/javascript', src='/bower_components/angular/angular.js')
     script(type='text/javascript', src='/javascripts/app.js')
     script(type='text/javascript', src='/javascripts/directives.js')
+    script(type='text/javascript', src='/javascripts/services.js')
   body
     block content
