Cursor default when dragging middle bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,10 @@ html, body {
   cursor: col-resize;
 }
 
+.middle:active {
+  cursor: default;
+}
+
 .middle::after {
   content: '';
   position: absolute;
