Rename angular modules

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,12 @@
 doctype html
-html(ng-app='Readyou')
+html(ng-app='readyou')
   head
     title= title
     link(rel='stylesheet', href='/bower_components/normalize.css/normalize.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(type='text/javascript', src='/bower_components/angular/angular.js')
     script(type='text/javascript', src='/javascripts/app.js')
-    script(type='text/javascript', src='/javascripts/directives.js')
+    script(type='text/javascript', src='/javascripts/resizable.js')
     script(type='text/javascript', src='/javascripts/services.js')
   body
     block content
