--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,18 +58,18 @@ html, body {
   right: 0;
 }
 
-.middle {
+.drag-bar {
   position: absolute;
   height: 100%;
   width: 10px;
   cursor: col-resize;
 }
 
-.middle:active {
+.drag-bar:active {
   cursor: default;
 }
 
-.middle::after {
+.drag-bar::after {
   content: '';
   position: absolute;
   display: block;
