--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html(ng-app='readyou')
     script(type='text/javascript', src='/bower_components/angular/angular.js')
     script(type='text/javascript', src='/bower_components/ace-builds/src-noconflict/ace.js')
     script(type='text/javascript', src='/javascripts/app.js')
+    script(type='text/javascript', src='/javascripts/controllers/sidebar.js')
     script(type='text/javascript', src='/javascripts/directives/resizable.js')
     script(type='text/javascript', src='/javascripts/directives/editor.js')
     script(type='text/javascript', src='/javascripts/services/events.js')
