--- a/views/sidebar.jade
+++ b/views/sidebar.jade
@@ -1,6 +1,6 @@
 // Settings Tab
 .sidebar-tab(ng-click="tabs.toggleTab('settings')", ng-class='{active: tabs.settings}')
-  h4 Editor Settings
+  p Editor Settings
 .tab-content(ng-show='tabs.settings')
   p This is some temporary content
   p this is some more
