--- a/public/stylesheets/tabs.css
+++ b/public/stylesheets/tabs.css
@@ -32,15 +32,26 @@
   width: 92px;
 }
 
-.sidebar-col > legend,
-.sidebar-row > legend {
+.sidebar-col > legend {
   font-weight: 600;
   margin-bottom: 10px;
 }
 
 .side-select {
-  margin-top: -2px;
+  margin-top: -3px;
   width: 100%;
+  height: 22px;
+  color: #555;
+  border: thin solid #ccc;
+  background: #fff;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.side-select:focus {
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+  outline: 0px;
+  border-color: #66afe9;
 }
 
 .radio {
