Move seed text into its own file

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html(ng-app='readyou')
     script(type='text/javascript', src='/javascripts/directives/editor.js')
     script(type='text/javascript', src='/javascripts/services/events.js')
     script(type='text/javascript', src='/javascripts/services/editorData.js')
+    script(type='text/javascript', src='/javascripts/services/document.js')
     
   body
     block content
