Create a naive renderer that rerenders the whole document when it changes

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,11 @@ html, body {
 
 .right-box {
   right: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 15px;
+  overflow: scroll;
 }
 
 .drag-bar {
