--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,13 +5,16 @@ html(ng-app='readyou')
     link(rel='stylesheet', href='/bower_components/normalize.css/normalize.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/tabs.css')
+    link(rel='stylesheet', href='/stylesheets/content.css')
     script(type='text/javascript', src='/bower_components/angular/angular.js')
     script(type='text/javascript', src='/bower_components/angular-animate/angular-animate.js')
     script(type='text/javascript', src='/bower_components/ace-builds/src-noconflict/ace.js')
+    script(type='text/javascript', src='/bower_components/marked/lib/marked.js')
     script(type='text/javascript', src='/javascripts/app.js')
     script(type='text/javascript', src='/javascripts/controllers/sidebar.js')
     script(type='text/javascript', src='/javascripts/directives/resizable.js')
     script(type='text/javascript', src='/javascripts/directives/editor.js')
+    script(type='text/javascript', src='/javascripts/directives/renderer.js')
     script(type='text/javascript', src='/javascripts/services/events.js')
     script(type='text/javascript', src='/javascripts/services/editorData.js')
     script(type='text/javascript', src='/javascripts/services/document.js')
